force-app/main/default/objects/clofor_com_cfs__AdvancedFilingSystem__c/clofor_com_cfs__AdvancedFilingSystem__c.object-meta.xml
<CustomObject>
    <label>税関事前申告ファイリングシステム</label>
    <nameField>
        <label>ADVANCED FILING SYSTEM Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>