force-app/main/default/objects/clofor_com_cfs__AdvancedFilingSystem__c/fields/clofor_com_cfs__ReportID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReportID__c</fullName>
    <label>REPORT ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>