force-app/main/default/objects/clofor_com_cfs__AdvancedFilingSystem__c/fields/clofor_com_cfs__ReportPassword__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReportPassword__c</fullName>
    <label>REPORT PASSWORD</label>
    <length>40</length>
    <type>Text</type>
</CustomField>