force-app/main/default/objects/clofor_com_cfs__AdvancedFilingSystem__c/fields/clofor_com_cfs__TechinicalSupportEmail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TechinicalSupportEmail__c</fullName>
    <label>TECHNICAL SUPPORT EMAIL</label>
    <type>Email</type>
</CustomField>