force-app/main/default/objects/clofor_com_cfs__AdvancedFilingSystem__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ServiceProvider__c</columns>
    <columns>clofor_com_cfs__URL__c</columns>
    <columns>clofor_com_cfs__HelpdeskExpert__c</columns>
    <columns>clofor_com_cfs__TechinicalSupportEmail__c</columns>
    <columns>clofor_com_cfs__NVOCCCode__c</columns>
    <columns>clofor_com_cfs__ReportID__c</columns>
    <columns>clofor_com_cfs__ReportPassword__c</columns>
    <columns>clofor_com_cfs__SystemID__c</columns>
    <columns>clofor_com_cfs__SystemPassword__c</columns>
    <columns>clofor_com_cfs__Contract__c</columns>
    <columns>clofor_com_cfs__FilingType__c</columns>
    <columns>clofor_com_cfs__PAYMENT_CONDITION__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>